[package]
name = "diesel-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

diesel = { version = "2.1.2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = [
    "postgres",
    "deadpool",
    "async-connection-wrapper",
] }
diesel_migrations = "2.1.0"
diesel-derive-newtype = "2.1.0"

tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
thiserror = "1.0.49"
